--- a/portfolio.html
+++ b/portfolio.html
@@ -19,8 +19,8 @@
             <nav class="menu-nav">
                 <a href="#" class="logo link"><span class="blue-logo" lang="en">Web</span>Studio</a>
                 <ul class="menu-list list">
-                    <li class="menu-item"><a class="menu-link link current" href="./index.html">Студия</a></li>
-                    <li class="menu-item"><a class="menu-link link" href="./portfolio.html">Портфолио</a></li>
+                    <li class="menu-item"><a class="menu-link link" href="./index.html">Студия</a></li>
+                    <li class="menu-item"><a class="menu-link link current" href="./portfolio.html">Портфолио</a></li>
                     <li class="menu-item"><a class="menu-link link" href="#">Контакты</a></li>
                 </ul>
             </nav>
